# Prio-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitsum.h  circuit.h  client.cpp  client.h  constants.cpp  constants.h  correlated.cpp  correlated.h  correlated_validated.cpp  correlated_validated.h  crypto.h  edabit.cpp  edabit.h  eval_heavy.cpp  eval_heavy.h  fmpz_utils.cpp  fmpz_utils.h  hash.cpp  hash.h  he_triples.cpp  he_triples.h  heavy.h  interp.cpp  interp.h  net_share.cpp  net_share.h  ot.cpp  ot.h  prio.h  proto.cpp  proto.h  server.cpp  server.h  share.cpp  share.h  types.h  (+2 more)
cmake/: FindGMP.cmake  common.cmake
poly/: fft.c  fft.h  poly_batch.c  poly_batch.h  poly_once.c  poly_once.h  util.c  util.h
poly/fft/: find_gen.sage
test/: a.out  test_bits.cpp  test_circuit.cpp  test_garble.cpp  test_hash.cpp  test_he_triples.cpp  test_heavy.cpp  test_interp.cpp  test_libote.cpp  test_linreg.cpp  test_net_share.cpp  test_ot.cpp  test_proto.cpp  test_share.cpp  test_validate_store.cpp  utils_test_connect.h
